# cat-gatekeeper

./: .gitignore  LICENSE  README.en.md  README.md  index.html  overlay.html  package-lock.json  package.json  settings.html  vite.config.ts
.claude/: settings.local.json
src/: OverlayApp.tsx  SettingsApp.tsx  index.css  main.tsx  overlay-main.tsx  overlay.css  settings-main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/i18n/locales/: en.json  zh.json
src-tauri/src/: main.rs
src/i18n/: index.ts
src/i18n/locales/: en.json  zh.json
src/tauri/: index.ts
